fix: update GroupPrefixes and GroupPatterns to accept multiple shapes from Polarion
Refs: #81